# bytebytego-db

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
architecture/: architecture-summary.txt
docs/: database_schema.md  plan.md  progress.md  setup.md
scripts/: drop_db.py  init_db.py
src/bbgodb/: __init__.py
src/bbgodb/core/: __init__.py  config.py  database.py
src/bbgodb/ingestion/: __init__.py
src/bbgodb/models/: __init__.py  article.py
src/bbgodb/notebooks/: data_ingestion.ipynb
src/bbgodb/observability/: __init__.py
src/bbgodb/retrieval/: __init__.py
src/bbgodb/utils/: __init__.py
