[project]
name = "bbgodb"
version = "0.1.0"
description = "ByteByteGo RAG System - Intelligent Q&A over system design articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "pinecone-client>=3.0.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "llama-index>=0.9.0",
    "llama-index-core>=0.9.0",
    "llama-index-readers-web>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-llms-anthropic>=0.1.0",
    "llama-index-vector-stores-pinecone>=0.1.0",
    "llama-index-multi-modal-llms-openai>=0.1.0",
    "langsmith>=0.0.70",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "httpx>=0.25.0",
]

[project.scripts]
bbgodb = "bbgodb.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
